second pass on CG

--- a/egbib.bib
+++ b/egbib.bib
@@ -338,3 +338,9 @@ year={2011},
 month={Nov}, 
 pages={1052-1059}, 
 doi={10.1109/ICCVW.2011.6130367},}
+
+@misc{shewchuk94,
+  title={An introduction to the conjugate gradient method without the agonizing pain},
+  author={Shewchuk, Jonathan Richard},
+  year={1994}
+}
