--- a/experiments.tex
+++ b/experiments.tex
@@ -188,7 +188,7 @@ AP and AVP and in Fig.~\ref{fig:car_cnn_ap} in terms of
 precision-recall plots and viewpoint confusion matrices. Example
 outputs of our method applied to candidate object detections are given
 in Fig.~\ref{fig:pascal12cnn}, and the effect of fine-tuning is
-visualized in Fig.~\ref{}.
+visualized in Fig.~\ref{fig:tuning}.
 
 
  More qualitative results are part of
@@ -210,14 +210,15 @@ The second observation is that the fine-tuning based on MCMC can
 indeed improve pose estimation performance slightly, e.g., by $1.1$
 for bicycle-16v and using the DPM-VOC+VP as the base detector, or by
 $1.1$ for bicycle-16v when using the R-CNN as the base detector.
-
+%
+In Fig.~\ref{fig:tuning}, we visualize the effect of fine-tuning
+qualitatively for two different test images. In both cases, the
+fine-tuned visually comes closer to the true 3D pose.
 % We got significant improvement on viewpoint estimation by using our
 % method on top of general purpose detectors. Note that our method
 % estimates azimuth, elevation, in-plane rotation, focal length
 % estimation, fine-grained categorization whereas V-DPM, VOC-DPM only
 % estimate discrete viewpoints.
-
-
 
 \begin{figure*}[h]
 \setlength\tabcolsep{1pt}
@@ -303,11 +304,26 @@ bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.
   \label{fig:car_cnn_ap}
 \end{figure}
 
-\subsection{Stability of Our Method for Irregular Bounding Boxes}
-
+\paragraph{Robustness.}
 % Generic object detectors give overlapping detection bounding boxes of the same object which can be handled by non maximal suppression. For these overlapping detections, 
+While the R-CNN detector~\cite{Girshick14} is highly robust to
+variations in object appearance and even occlusion and truncation,
+the resulting bounding box detections vary largely in the object
+portions that they contain  -- notably, they might
 
-R-CNN detection bounding boxes are irregular in shape since they come from other region proposal methods and sometimes they truncate objects. To handle such irregular shape and truncation, we added small context around the bounding boxes and run our method. 
+
+
+
+In Fig.~\ref{}, we visualize the effect 
+
+accomodate 
+
+
+
+ are irregular in
+shape since they come from other region proposal methods and sometimes
+they truncate objects. To handle such irregular shape and truncation,
+we added small context around the bounding boxes and run our method. 
 
 We assumed that object can be arbitrarily truncated by the bounding box and search all plausible scales and translations. This can be efficiently computed using FFT-based convolution (refer Section. \ref{sec:fft}). We put examples of such conditions in Figure \ref{fig:stability}. Although the input bounding boxes are irregular and truncate objects, our method reliably generated a reasonable prediction of pose, translation, scale and CAD model.
 
