done pass over exp

--- a/egbib.bib
+++ b/egbib.bib
@@ -344,3 +344,23 @@ doi={10.1109/ICCVW.2011.6130367},}
   author={Shewchuk, Jonathan Richard},
   year={1994}
 }
+
+
+@inproceedings{sun10eccv,
+ title={Depth-Encoded Hough Voting for joint object detection and shape recovery},
+ author={M. Sun and B.X. Xu and G. Bradski and S. Savarese},
+ booktitle={ECCV'10},
+}
+
+@inproceedings{stark10bmvc,
+   title = {Back to the Future: Learning Shape Models from {3D} {CAD} Data},
+   author = {Stark, Michael and Goesele, Michael and Schiele, Bernt},
+   booktitle = {BMVC'10}
+}
+
+@inproceedings{gu10eccv,
+ author = {Gu, Chunhui and Ren, Xiaofeng},
+ title = {Discriminative mixture-of-templates for viewpoint classification},
+ booktitle = {ECCV'10},
+@year = 2010
+} 
